<resources>
    <string name="app_name">Wallies</string>
    <string name="app_logo">App Logo</string>
    <string name="internet_error">There may be a problem with your internet connection. You can check your internet connection and try again.</string>
    <string name="retry_button">Try Again</string>
    <string name="set_wallpaper_text">Set as wallpaper</string>
    <string name="set_wallpaper_image_desc">Set Wallpaper</string>
    <string name="share_button_text">Share</string>
    <string name="download_button_text">Download</string>
    <string name="views_text">Views</string>
    <string name="download_text">Download</string>
    <string name="like_text">Like</string>
    <string name="walpaper_list_photo">Wallpaper List Photo</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edittext_clear">Clear</string>
    <string name="collections_screen_title_text">Collections</string>
    <string name="created_at">Created At</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="cache_state_string">Cache Cleared</string>
    <string name="internet_check_title">Caution!</string>
    <string name="choice_language_text_title">Select your preferred language</string>
    <string name="theme_text">Theme</string>
    <string name="language_title_text">Language</string>
    <string name="no_picture_text">Sorry, nothing to display here…</string>
    <string name="more">More</string>
    <string name="set_to_lock_screen_text">Set to lock screen</string>
    <string name="set_to_home_screen_text">Set to home screen</string>
    <string name="set_to_home_amp_lockscreens_text"><![CDATA[Set to home & lockscreens]]></string>
    <string name="set_wallpaper_desc_text">You can use this picture as your wallpaper by choosing what you want from the options below.</string>
    <string name="set_wallpaper_applied_time">Adjusting…</string>
    <string name="set_wallpaper_applied">Wallpaper adjusted.</string>
    <string name="download_photo_desc_text">According to the size of the photo, there are download options below, you can download according to the size you want.</string>
    <string name="low_quality_text">Low Quality</string>
    <string name="medium_quality_text">Medium Quality</string>
    <string name="full_high_quality_text">Full (High Quality)</string>
    <string name="raw_very_high_quality_text">Raw (Very High Quality)</string>
    <string name="downloading_text">Downloading…</string>
    <string name="image_download_failed_text">Image Download Failed</string>
    <string name="title_notification">Title</string>
    <string name="message_notification">Message</string>
    <string name="posts_text">Posts</string>
    <string name="followers_text">Followers</string>
    <string name="following_text">Following</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered Yet, </string>
    <string name="profile_title">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_profile">Welcome</string>
    <string name="name_text">Name: %1$s</string>
    <string name="surname_text">Surname: %1$s</string>
    <string name="edit_user_info_title">Edit Personal Information</string>
    <string name="edit_email_title">Edit Email</string>
    <string name="show_info_edit_infos">If you have information that you want to edit, you can use the options below.</string>
    <string name="send_info">Send</string>
    <string name="edit_email">Edit Email</string>
    <string name="change_email_info">In order to change your e-mail address and ensure its security, you must enter your password.</string>
    <string name="required_field">This field cannot be left blank !</string>
    <string name="invalid_email">Invalid email !</string>
    <string name="password_length">Password can\'t be less than 6 !</string>
    <string name="required_at_least_1_digit">Required at least 1 digit !</string>
    <string name="password_must_contain_upper_and_lower_case_letters">Password must contain upper and lower case letters !</string>
    <string name="one_special_character_required">One special character required !</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="forgot_password_title">Change Password</string>
    <string name="password_change">Your Password Has Been Changed</string>
    <string name="email_send">Password recovery mail has been sent</string>
    <string name="en_language">English</string>
    <string name="tr_language">Turkish</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="choise_theme">Choise Your Theme</string>
    <string name="choise_language">Choise Your Language</string>
    <string name="download_photo_success">Image downloaded successfully</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login_title">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_sub_title">Please enter your information to create an account.</string>
    <string name="success_sign">Registration Successful</string>
    <string name="success_login">Login Successful</string>
    <string name="wallpapers_title">Wallpapers</string>
    <string name="collections_title">Collections</string>
    <string name="favorites_title">Favorites</string>
    <string name="settings_title">Settings</string>
    <string name="user_not_auth_caution">You must log in to view your information.</string>
    <string name="click_for_login"> Click to log in.</string>
    <string name="text_sort">Sort by</string>
    <string name="text_alphabetic_sort">By Alphabetical Order</string>
    <string name="text_likes_sort">By Number of Likes</string>
    <string name="text_caution_add_favorite">Don\'t forget to log in with your account to keep your favorites safe! If you log in with the account, your favorites will be stored securely on the remote server and you can access them from any device. Sign in now to protect and sync your favorites!</string>
    <string name="text_warning">Warning!</string>
    <string name="text_continue">Continue</string>
    <string name="search_animal">Animal</string>
    <string name="search_jungle">Jungle</string>
    <string name="search_natural">Natural</string>
    <string name="search_space">Space</string>
    <string name="search_cars">Cars</string>
    <string name="search_walley">Walley</string>
    <string name="search_cat">Cat</string>
    <string name="search_rain">Rain</string>
    <string name="topics_title">Topics</string>
    <string name="show_all">Show All</string>
    <string name="popular_title">Popular</string>
    <string name="latest_title">Latest</string>
    <string name="photos">Photos</string>
    <string name="connect_with_user">Connect with %1$s</string>
    <string name="or">Or</string>
    <string name="continue_without_registration">Continue Without Registration</string>
    <string name="users">Users</string>
    <string name="profile_image">Profile Image</string>
</resources>