<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogContainer"
    style="@style/BottomSheetDialogStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_8"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/dp_16"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRawQuality"
        style="@style/DialogButtonStyle"
        android:text="@string/raw_very_high_quality_text"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toTopOf="@+id/buttonFullQuality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetWallpaperDesc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFullQuality"
        style="@style/DialogButtonStyle"
        android:text="@string/full_high_quality_text"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRawQuality" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMediumQuality"
        style="@style/DialogButtonStyle"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/medium_quality_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFullQuality" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLowQuality"
        style="@style/DialogButtonStyle"
        android:text="@string/low_quality_text"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMediumQuality" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSetWallpaperDesc"
        style="@style/DialogText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/download_photo_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDownload" />

</androidx.constraintlayout.widget.ConstraintLayout>