<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetDialogStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_8"
    app:behavior_peekHeight="@dimen/dp_16"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:minWidth="@dimen/dp_32"
        android:minHeight="@dimen/dp_32"
        android:src="@drawable/ic_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_title"
        style="@style/DialogTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/text_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_error" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_description"
        style="@style/DialogText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/text_caution_add_favorite"
        android:textColor="@color/text_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:backgroundTint="@color/crimson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_32"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:backgroundTint="@color/red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_32"
        android:text="@string/text_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_description" />

</androidx.constraintlayout.widget.ConstraintLayout>