<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogContainer"
    style="@style/BottomSheetDialogStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_8"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/dp_16"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLockScreen"
        style="@style/DialogButtonStyle"
        android:text="@string/set_to_lock_screen_text"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toTopOf="@+id/buttonHomeScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetWallpaperDesc"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonHomeScreen"
        style="@style/DialogButtonStyle"
        android:text="@string/set_to_home_screen_text"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLockScreen"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonHomeAndLockScreen"
        style="@style/DialogButtonStyle"
        android:text="@string/set_to_home_amp_lockscreens_text"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHomeScreen"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewWallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSetWallpaperDesc"
        style="@style/DialogText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/set_wallpaper_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWallpaper" />

</androidx.constraintlayout.widget.ConstraintLayout>